--- a/css/style.css
+++ b/css/style.css
@@ -196,37 +196,23 @@ h2{
 /*Europa*/
 
 .herocontinente{
-  display: flex;
   flex-direction: row;
-  align-items: center;
-  max-width: 1100px;
+  max-width: 550px;
   height: 550px;
   background-color: #FCD99D;
-  margin: 0 auto;
 }
 
 h3{
   font-family: "MuseoModerno";
   font-size: 50pt;
   color: #EC6426;
-  flex: 1 1 50%;
   max-width: 450px;
+    margin: 0;
 }
 
-.space{
-  flex: 0 0 50%;
-  background-color: #FFF8F2;
-  width: 550px;
-  height: 550px;
-}
 
 .contenutoherocontinente{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 40px;
-  margin-bottom: 40px;
-  flex: 1 1 50%;
+height:100%
 }
 
 .contenutoherocontinente p{
