--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ height:100%
   flex: 0 0 50%;
   width: 100%;
   height: 550px;
+  object-fit: cover; 
 }
 
 
@@ -606,4 +607,3 @@ footer {
   }
 
   
-}}
