--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,7 @@ footer {
   }
 
   .herocontinente h3 {
+    margin: 0;
     font-size: 28pt;
     max-width: 100%;
   }
@@ -490,6 +491,7 @@ footer {
   }
 
   .contenutoherocontinente p {
+    margin: 0;
     max-width: 100%;
     font-size: 14pt;
     text-align: center;
