--- a/css/style.css
+++ b/css/style.css
@@ -376,37 +376,6 @@ width: 100vw;
   margin-right: 200px;
 }
 
-/*continenti*/
-
-.vuotolista4{
-  display: flex;
-  flex-direction: column;
-  max-width: 550px;
-}
-
-.vuotolista4 img{
-  max-width: 550px;
-  height: 250px;
-  object-fit: cover;
-  margin-top: 20px;
-}
-
-.vuotolista4 p{
-  font-size: 12pt;
-}
-
-.vuotolista4 a{
-  color:#EC6426;
-  font-size: 12pt;
-  margin-top: 60px;
-  font-weight: bold;
-  text-decoration: none;
-  margin: 0;
-}
-
-.vuotolista4 a:hover{
-  color: #632713;
-}
 
 /* CURIOSITà */
 
@@ -560,6 +529,7 @@ footer {
   .sfondobg {
     width: 100%;
     padding-bottom: 40px;
+
   }
 
   .sfondo {
@@ -591,6 +561,7 @@ footer {
   .sfondobg2 {
     width: 100%;
     padding-bottom: 40px;
+    margin-top: 40px;
   }
   
   .color {
@@ -599,6 +570,10 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .color{
+    padding: 0;
   }
   
   .vuotolista2 {
