--- a/css/style.css
+++ b/css/style.css
@@ -129,11 +129,11 @@ h2{
   color: #EC6426;
 }
 
-/*.space2{
+.space2{
   background-color: #FFF8F2;
   width: 550px;
   height: 500px;
-}*/
+}
 
 .image5{
   flex: 0 0 50%;
@@ -307,6 +307,47 @@ width: 100vw;
   width: 350px;
   object-fit: cover;
 }
+
+/*continenti*/
+
+.color2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1100px;
+}
+
+.vuotolista4 , .vuotolista5 {
+  margin-top: 50px;
+}
+
+.vuotolista4 p, .vuotolista5 p{
+  font-size: 12pt;
+}
+
+.vuotolista4 a,
+.vuotolista5 a {
+  color: #EC6426;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.vuotolista4 a:hover,
+.vuotolista5 a:hover {
+  color: #632713;
+}
+
+.vuotolista4 img,
+.vuotolista5 img {
+  width: 100%;
+  height: 250px;
+  margin-top: 16px;
+  object-fit: cover;
+}
+
+
+
+
 
 
 
