--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,8 @@ width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1100px;
+  margin: 0 auto;
+  max-width: 800px;
 }
 
 .vuotolista4 , .vuotolista5 {
@@ -327,21 +328,22 @@ width: 100vw;
 
 .vuotolista4 a,
 .vuotolista5 a {
-  color: #EC6426;
-  font-weight: bold;
+  color: #632713;
   text-decoration: none;
+  margin-bottom: 0;
 }
 
 .vuotolista4 a:hover,
 .vuotolista5 a:hover {
-  color: #632713;
+  color: #EC6426;
+  font-weight: bold;
 }
 
 .vuotolista4 img,
 .vuotolista5 img {
   width: 100%;
   height: 250px;
-  margin-top: 16px;
+  margin-top: 30px;
   object-fit: cover;
 }
 
