--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,21 @@ nav li {
     margin-left: 20px;
 }
 
-h1{
+.nomesito a{
   font-family: "MuseoModerno";
   color: #EC6426;
+  font-weight: bold;
+  font-size: 25pt;
 } 
+
+.nomesito a:hover{
+  color: #632713;
+  text-decoration: none;
+}
+
+.nomesito a.attivo{
+  color: #EC6426;
+}
 p{
   font-size: 15pt;
 }
@@ -283,8 +294,8 @@ h6{
 }
 
 .sfondobg{
-background-color: #FCD99D;
-width: 100vw;
+  background-color: #FCD99D;
+  width: 100vw;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -606,6 +617,10 @@ footer {
 
   
   /*street food fusion*/
+  .intro3{
+    display: block;
+
+  }
 
   .sfondobg2 {
     width: 100%;
