--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,6 @@ h6{
 .vuotolista4 a,
 .vuotolista5 a {
   color: #632713;
-  text-decoration: none;
   margin-bottom: 0;
 }
 
@@ -377,7 +376,6 @@ h6{
 
 .sfondobg2{
   background-color: #FCD99D;
-  width: 100vw;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -389,6 +387,9 @@ h6{
   max-width: 1100px; 
   margin: 0 auto;
   padding: 60px 0;
+}
+.giallo{
+  background-color: #FCD99D;
 }
 
 .vuotolista2{
@@ -483,7 +484,7 @@ footer {
 
 /*RESPONSIVE*/
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
 
   nav ul {
     flex-direction: column;
