--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,31 @@ h6{
   object-fit: cover;
 }
 
+/*curiosità*/
+.list4{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+.list4img{
+    height: 350px;
+    width: 270px;
+    object-fit: cover;
+}
+.list5 p{
+    font-size: 12pt;
+    max-width: 550px;
+}
+
+.list5 h5{
+  color: #632713;
+  font-size: 25pt;
+  margin-bottom: -20px; 
+  margin-bottom:15px;
+}
+
 
 /*street food fusion funzionante*/
 
@@ -406,6 +431,7 @@ h6{
 .intro3 img{
   max-width: 550px;
 }
+
 
 
 /*street food fusion*/
@@ -679,8 +705,11 @@ footer {
     object-fit: cover;
 }
 
+.list4{
+    flex-direction: column;
+}
   
-  /*street food fusion*/
+  /*vari comandi*/
 
 
   .sfondobg2 {
