--- a/css/style.css
+++ b/css/style.css
@@ -248,21 +248,22 @@ height:100%
   flex-direction: row;
   align-items: center;
   margin-bottom: 150px;
+  max-width: 1100px;
 }
 
 .image3{
   display: flex;
-  align-items: center;
-  flex: 1 1 50%;
-  width: 100%;
+  flex: 1;
+  max-width: 550px;
   height: 550px;
   object-fit: cover;
 
 }
 
 .image2{
-  flex: 0 0 50%;
-  width: 100%;
+  display: flex;
+  flex: 1;
+  max-width: 550px;
   height: 550px;
   object-fit: cover;
 }
@@ -294,13 +295,12 @@ h6{
 }
 
 .sfondobg{
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #FCD99D;
-  width: 1100px;
-  padding: 10px 10px 10px 10px;
-  box-sizing: border-box;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+ padding-bottom: 60px;
 }
 .sfondo{
   display: flex;
@@ -374,11 +374,7 @@ h6{
     justify-content: space-between;
     padding: 10px 0;
 }
-.list4img{
-    height: 350px;
-    width: 270px;
-    object-fit: cover;
-}
+
 .list5 p{
     font-size: 12pt;
     max-width: 550px;
